--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
 	<dependencies>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+		</dependency>
+
 		<dependency>
 			<groupId>co.com.foodbank.validaton</groupId>
 			<artifactId>co.foodbank.lib.util</artifactId>
